# anityan

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  структура на пайтоне.txt  структура.txt
.github/workflows/: build.yml  code-quality.yml
src/: AppBase.cpp  AppBase.h  AppBase.py  Diary.cpp  Diary.h  Diary.py  ElevenLabsClient.cpp  ElevenLabsClient.py  Endpoint.py  ImageGenerator.cpp  ImageGenerator.py  KuniCharacter.cpp  KuniCharacter.py  OpenAIChat.cpp  OpenAIChat.h  OpenAIChat.py  OpenAITools.cpp  OpenAITools.py  StableDiffusionClient.cpp  StableDiffusionClient.h  StableDiffusionClient.py  VoiceGenerator.cpp  VoiceGenerator.h  VoiceGenerator.py  WebSearch.cpp  WebSearch.py  __init__.py  config.h  config.py  main.cpp  main.py
src/anityan/telegram/: __init__.py  telegram_client.py
src/anityan/util/: __init__.py  secrets.py
src/telegram/: TelegramClient.cpp  TelegramClient.h  TelegramClient.py  TelegramClient.pyi  secrets.pyi
src/ui/debug/: Diary.cpp  Diary.py  Diary.pyi  DiaryEmbedding.py  DiaryEmbedding.pyi  DiaryQueryAI.cpp  DiaryQueryAI.py  DiaryQueryAI.pyi  KuniDebugWindow.h  KuniDebugWindow.py  KuniDebugWindow.pyi
src/util/: cosine_similarity.py  important_things_to_remember.h  important_things_to_remember.py  populate_from_diary_ai_if_needed.py  secrets.cpp  secrets.py  secrets.pyi
tests/: DairyIntegrationTest.cpp  DairyIntegrationTest.py  DairyTest.cpp  ImageGeneratorIntegrationTest.cpp  ImageGeneratorIntegrationTest.py  OpenAIChatIntegrationTest.cpp  OpenAIChatIntegrationTest.py  OpenAIChatTest.cpp  OpenAIChatTest.py  StableDiffusionClientIntegrationTest.cpp  StableDiffusionClientIntegrationTest.py  TelegramIntegrationTests.cpp  TelegramIntegrationTests.py  WebSearchIntegrationTest.cpp  WebSearchIntegrationTest.py  WebSearchTest.cpp  common.py
